# movieqbot

./: .gitignore  README.md  build.sh
bot/: bot.go  build.sh
cutter/: CMakeLists.txt  cutter.cpp  cutter.py
search/: search.go
web/: build.sh  index.html  search.html  web.go
